--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+        <!-- Custom styles for this template -->
+   <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/elegant-icons.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/jquery-ui.min.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/magnific-popup.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/owl.carousel.min.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/slicknav.min.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+  <!-- Custom Scripts for this template -->
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/jquery-ui.min.js"></script>
+  <script src="assets/js/mixitup.min.js"></script>
+  <script src="assets/js/jquery.slicknav.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="assets/js/jquery.nicescroll.min.js"></script>
+  <script src="assets/js/main.js"></script>
     <title>React App</title>
   </head>
   <body>
